--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
    
             <div id="title-section">
 
-            <label for="title">Title</label><br>
-            <input type="text" id="title" name="title" required><br><br>
+            <label for="title_">Title</label><br>
+            <input type="text" id="title_" name="title_" required><br><br>
 
-            <label for="subtitle">Subtitle</label><br>
-            <input type="text" id="subtitle" name="subtitle"><br><br>
+            <label for="subtitle_">Subtitle</label><br>
+            <input type="text" id="subtitle_" name="subtitle_"><br><br>
         </div>
 
       
@@ -38,6 +38,7 @@
     
     <script type="module" src="script.js" charset="utf-8"></script>
     <script type="module" src="functions.js" charset="utf-8"></script>
+    <script type="module" src="card.js" charset="utf-8"></script>
 
 </body>
 </html>
