BLOB OK - incluí na função de gerar PDF a ocultação temporária do formulário antes da impressão

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <h3>Form</h3>
 
-    <form id="cardForm">
+    <form id="card-form">
 
         <div id="materialidade" class="form-group">
 
@@ -212,6 +212,7 @@
 
         <div id="card-pdf" class="card-box">
             <p><b>codigos</b></p>
+            <p id="ficha-aqui-pdf"></p>
             <p id="codigos-aqui-pdf"></p>
         </div>
 
