--- a/index.html
+++ b/index.html
@@ -148,12 +148,15 @@
                     <input type="text" class="form-control" id="material-adicional-qtd" name="material-adicional-qtd">
                 </div>
             </div>
+        </div>
+        <!-- Bibliotecário e CRB -->
+        <p>Sou bibliotecário(a) e quero informar meu registro profissional (CRB)</p>    
+        <div id="identificacao">
+            <label for="bibliotecario-nome">Nome completo</label><br>
+            <input type="text" class="form-control" id="bibliotecario-nome" name="identificacao">
 
-
-
-
-
-
+            <label for="crb">CRB</label><br>
+            <input type="text" class="form-control" id="crb" name="identificacao">
         </div>
     </form>
     <div>
@@ -166,7 +169,7 @@
             <p id="ficha-aqui"></p>
             <p id="codigos-aqui"></p>
         </div>
-
+        <p id="bibliotecario-aqui"></p>
         <div>
             <button type="button" id="btn-pdf">Get PDF</button><br><br>
         </div>
@@ -215,7 +218,7 @@
             <p id="ficha-aqui-pdf"></p>
             <p id="codigos-aqui-pdf"></p>
         </div>
-
+        <p id="bibliotecario-aqui-pdf"></p>
     </div>
 
 
